v3.0.0: reverted locale change, used methods introduced in Java 21